# CHelloTriangle

./: .gitignore  CMakeLists.txt  HelloTriangle.cpp  Makefile
shaders/: shader.frag
